cros: Fix menu anchor bounds in RTL

Menu anchor bounds should be mirrored in RTL.

Bug: 909672
Change-Id: I3c0895087b08bbfb7baa93787f3ea77411160817
Reviewed-on: https://chromium-review.googlesource.com/c/1368777
Reviewed-by: Manu Cornet <manucornet@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616368}
Former-commit-id: e97f255d45a31a0b4d24829507354174e43243b1